app-resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-deployment-pipeline-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integration-deployment-pipeline-test
  template:
    metadata:
      labels:
        app: integration-deployment-pipeline-test
    spec:
      containers:
        - name: integration-deployment-pipeline-test
          image: image-registry.openshift-image-registry.svc:5000/testproject/integration-deployment-pipeline-test
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: integration-deployment-pipeline-test
  name: integration-deployment-pipeline-test
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: integration-deployment-pipeline-test
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: integration-deployment-pipeline-test
spec:
  to:
    kind: Service
    name: integration-deployment-pipeline-test
    weight: 100
